# vesper

./: .gitignore  README.md  Snakefile  environment-list.txt  environment.yml  pyproject.toml  requirements.txt
docs/: annotate.md  outputs.md  refine.md
notebooks/: alu_breakpoint_analysis.ipynb  confidence.ipynb  dev.ipynb
src/vesper/: cli.py
src/vesper/analysis/: breakpoint.py  context_extractor.py  exporter.py  features.py  kmer.py
src/vesper/commands/: __init__.py  annotate.py  refine.py  summarize.py
src/vesper/misc/: vesper_logo.txt  vesper_logo_mini.txt
src/vesper/models/: __init__.py  contexts.py  genomic_intervals.py  interval.py  reads.py  registry.py  repeatmasker.py  validation.py  variants.py
src/vesper/processors/: __init__.py  annotations.py  annotations_multiprocess.py  annotations_threadpool.py  reads.py  repeatmasker.py  variants.py  vcf.py
src/vesper/utils/: __init__.py  common.py  config.py  gtex_conversion.py  logging.py  vesper_logo.txt
tests/: BEDProcessor.py  VCFProcessor.py  annotation_processing.py  benchmark_multiprocess.py  benchmark_threadpool.py  read_processing.py  registry.py  repeatmasker.py  summarize.py  test_context_cache.py  test_context_extractor.py  test_exporter.py  test_features.py  test_processors.py  test_usage.py  vcf.py  vcf_processing.py
