[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vesper"
version = "0.1.0"
description = "Toolkit for annotating and refining *de novo* transposable elements (TEs) from PacBio HiFi data."
authors = [
    { name = "stacy", email = "stacy-l@berkeley.edu" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
vesper = "vesper.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=vesper"
